# PyEwE

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/reference/: index.html
api/results/: index.html
development/: index.html
docs/: development.md  high_level_interface.md  index.md  medium_level_interface.md  parameter_management.md  usage.md
docs/api/: reference.md  results.md
high_level_interface/: index.html
medium_level_interface/: index.html
parameter_management/: index.html
scripts/: load_model.py
search/: search_index.json
src/decom_py/: CoreInterface.py  EwE.py  EwEModels.py  EwEModule.py  EwEResultExtraction.py  EwEScenarioInterace.py  EwEState.py  __init__.py  exceptions.py  parameter_management.py  scenario_interface.py  worker.py
src/decom_py/Exceptions/: EwEExceptions.py  __init__.py
src/decom_py/Results/: ResultManager.py  ResultsInterface.py  XArrayInterface.py  __init__.py  config.py  manager.py  xarray_interface.py
src/decom_py/core/: __init__.py  interface.py  models.py  module.py  results_extraction.py  state.py
src/decom_py/results/: config.py  manager.py  results_set.py
src/decom_py/temporary/: results_interface.py
src/pyewe/: __init__.py  exceptions.py  parameter_management.py  scenario_interface.py  worker.py
src/pyewe/core/: __init__.py  interface.py  models.py  module.py  results_extraction.py  state.py
src/pyewe/results/: __init__.py  config.py  manager.py  results_set.py
test/: conftest.py  test_CoreInterface.py  test_Parallel.py  test_ParameterManagers.py  test_ScenarioInterface.py  utils.py
test/resources/: BlackSea.eiixml  BlackSea.eweaccdb  BlackSea.laccdb  BlackSea_log.xml
test/resources/default_ecosim/: biomass_annual.csv  catch_annual.csv  tl_annual.csv  value_annual.csv
test/resources/test_inputs/: BlackSea-ContaminantForcing.csv  BlackSea-Ecotracer input 2.csv  BlackSea-Ecotracer input.csv  BlackSea-Group info.csv  BlackSea-Vulnerabilities.csv
test/resources/test_outputs/ecosim/: biomass_annual.csv  catch-fleet-group_annual.csv  catch_annual.csv  (+13 more)
tests/: test_unittest.py
(+1 files in other folders)
