[project]
name = "decom-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanTanAtAims", email = "d.tan@aims.gov.au" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pythonnet>=3.0.5",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "sandbox",
]

[dependency-groups]
dev = [
    "autopep8",
    "black",
    "ipython",
    "ipdb",
    "jupyter",
    "py-spy",
    "pudb",
    "pytest>=8.3.5",
    "ipykernel>=6.29.5",
]
test = [
    "pytest"
]
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "*.py"
