[project]
name = "pyewe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanTanAtAims", email = "d.tan@aims.gov.au" }
]
requires-python = ">=3.11"
dependencies = [
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pythonnet>=3.0.5",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "sandbox",
]

[dependency-groups]
dev = [
    "autopep8",
    "black",
    "ipython",
    "ipdb",
    "jupyter",
    "pytest>=8.3.5",
    "ipykernel>=6.29.5",
    "pytest-mock>=3.14.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]
test = [
    "pytest"
]
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "*.py"
addopts = "-p no:faulthandler"
filterwarnings = [
    "ignore::UserWarning",
]
